--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm learning to code!</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Hartford, CT</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Music, graphics, video games and MTG</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Designing websites, with my own graphics too!</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>West Hartford, CT</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>So I can combine my skills to get into the industry!</p>
     </section>
 
     <footer id="footer">
